Fix for blog post list title not wrapping by word

--- a/less/plugins/blog/blog-posts-list.less
+++ b/less/plugins/blog/blog-posts-list.less
@@ -184,7 +184,6 @@
         color: @color__h2--text;
 
         &:hover {
-            box-shadow: inset 0px -1px 0px 0px @color__p--text;
             text-decoration: none;
         }
     }
